Neo4jクラスタリング無しの構成

--- a/.env.example
+++ b/.env.example
@@ -16,10 +16,8 @@ GITHUB_CLIENT_SECRET=
 NEO4J_USERNAME="neo4j"
 NEO4J_PASSWORD=
 
-NEO4J_FABRIC_DATABASE="fabric"
-
-NEO4J_CONTENTS_DATABASE="contents"
-NEO4J_CONTENTS_GRAPH_NAME="contents"
+NEO4J_HTTP_PORT=17474
+NEO4J_BOLT_PORT=17687
 
 # imageproxy
 IMAGEPROXY_PORT=12000
