歴史的なものを削除 (#57)

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,34 @@
 # Adminer
 ADMINER_PORT=13000
-ADMINER_DESIGN=pepa-linha
+ADMINER_DESIGN="pepa-linha"
 
-# Imageproxy
+# Portainer
+PORTAINER_PORT=9000
+
+# chore
+RAKUTEN_APPLICATION_ID=
+RAKUTEN_APPLICATION_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+# Neo4j
+NEO4J_USERNAME="neo4j"
+NEO4J_PASSWORD=
+
+NEO4J_HTTP_PORT=17474
+NEO4J_BOLT_PORT=17687
+
+# imageproxy
 IMAGEPROXY_PORT=12000
 IMAGEPROXY_HOST="localhost"
-IMAGEPROXY_BASE_URL="http://localhost:${IMAGEPROXY_PORT}"
+IMAGEPROXY_BASE_URL="http://${IMAGEPROXY_HOST}:${IMAGEPROXY_PORT}"
 
-# Auth Server
-AUTH_SERVER_PORT=10001
-AUTH_SERVER_SESSION_NAME="bo2kshelf.sid"
-AUTH_SERVER_SESSION_SECRET=# openssl rand --hex  64
-AUTH_SERVER_JWT_SECRET=# openssl rand --hex  64
-AUTH_SERVER_MONGO_USERNAME="user"
-AUTH_SERVER_MONGO_PASSWORD=# openssl rand --hex  64
-AUTH_SERVER_MONGO_DATABASE="sessions"
-AUTH_SERVER_POSTGRES_PASSWORD=# openssl rand --hex  64
-AUTH_SERVER_POSTGRES_DATABASE="authapi"
+# Public API
+PUBLIC_API_PORT=8080
 
-# API Gateway
-API_GATEWAY_PORT=11000
-API_GATEWAY_JWT_SECRET=${AUTH_SERVER_JWT_SECRET}
+PAPI_USERS_MYSQL_ROOT_PASSWORD=
+PAPI_USERS_MYSQL_DATABASE="db"
 
-# Neo4j API
-NEO4J_API_PORT=11001
-NEO4J_API_NEO4J_USERNAME="neo4j"
-NEO4J_API_NEO4J_PASSWORD=# openssl rand --hex  64
-
-# Bookcover API
-BOOKCOVER_API_PORT=11002
-RAKUTEN_APPLICATION_ID=# required
-RAKUTEN_APPLICATION_SECRET=# required
-
-# Users API
-USERS_API_PORT=11003
-USERS_API_MYSQL_ROOT_PASSWORD=# openssl rand --hex  64
-USERS_API_MYSQL_DATABASE="db"
-USERS_API_JWT_SECRET=${AUTH_SERVER_JWT_SECRET}
-
-GITHUB_CLIENT_ID=# required
-GITHUB_CLIENT_SECRET=# required
-
-# Search API
-SEARCH_API_PORT=11004
+# Management API
+MANAGEMENT_API_PORT=9090
