--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,9 @@ PUBLIC_API_PORT=8080
 PAPI_USERS_MYSQL_ROOT_PASSWORD=
 PAPI_USERS_MYSQL_DATABASE="db"
 
+# Auth API
+AUTH_API_PORT=8081
+JWT_SECRET=
+
 # Management API
 MANAGEMENT_API_PORT=9090
