--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,10 @@ volumes:
   mapi-bookcover-service-redis-data:
 
   # public api
-  papi-read-users-mysql-data:
   papi-bookcover-service-redis-data:
+
+  # auth api
+  auth-api-bookcover-service-redis-data:
 
 networks:
   # neo4j
@@ -60,6 +62,13 @@ networks:
   papi-read-contents:
   papi-read-records:
   papi-bookcover:
+
+  # auth api
+  auth-api-read-users:
+  auth-api-current-user:
+  auth-api-read-contents:
+  auth-api-read-records:
+  auth-api-bookcover:
 
 services:
   # for development tools
@@ -312,3 +321,108 @@ services:
       - papi-bookcover
     volumes:
       - papi-bookcover-service-redis-data:/data
+
+  # auth-api
+  auth-api-gateway:
+    image: ghcr.io/bo2kshelf/authenticated-api-gateway:develop@sha256:2089bf123727338b8807589a2b13c73ec61a09367d748cff7da72e062d642bf7
+    depends_on:
+      auth-api-bookcover-service:
+        condition: service_started
+      auth-api-read-contents-service:
+        condition: service_started
+      auth-api-read-records-service:
+        condition: service_started
+      auth-api-read-users-service:
+        condition: service_started
+      auth-api-current-user-service:
+        condition: service_started
+    networks:
+      - auth-api-read-users
+      - auth-api-current-user
+      - auth-api-read-contents
+      - auth-api-read-records
+      - auth-api-bookcover
+    ports:
+      - published: $AUTH_API_PORT
+        target: 4000
+    environment:
+      PORT: 4000
+      BOOKCOVER_SERVICE_URL: http://auth-api-bookcover-service:4000/graphql
+      READ_USERS_SERVICE_URL: http://auth-api-read-users-service:4000/graphql
+      READ_CONTENTS_SERVICE_URL: http://auth-api-read-contents-service:4000/graphql
+      READ_RECORDS_SERVICE_URL: http://auth-api-read-records-service:4000/graphql
+      CURRENT_USER_SERVICE_URL: http://auth-api-current-user-service:4000/graphql
+
+  auth-api-read-users-service:
+    image: ghcr.io/bo2kshelf/read-users-service:develop@sha256:04ce0b1215636e1a05b4f47f742f02605c752c2f43ef5d709add3f0b2b6f167b
+    depends_on:
+      users-mysql-core:
+        condition: service_healthy
+    networks:
+      - imageproxy
+      - users-mysql-core
+      - auth-api-read-users
+    environment:
+      PORT: 4000
+      PRISMA_DATABASE_URL: mysql://root:${USERS_MYSQL_CORE_ROOT_PASSWORD}@users-mysql-core:3306/${USERS_MYSQL_CORE_DATABASE}
+      IMAGEPROXY_BASE_URL: $IMAGEPROXY_BASE_URL
+
+  auth-api-current-user-service:
+    image: ghcr.io/bo2kshelf/current-user-service:develop@sha256:eb555808bc46ffb7d214aede2aa82725341968faab956375b8b0f3687fa746e4
+    networks:
+      - auth-api-current-user
+    environment:
+      PORT: 4000
+      JWT_SECRET: $JWT_SECRET
+
+  auth-api-read-contents-service:
+    image: ghcr.io/bo2kshelf/read-contents-service:develop@sha256:3aa9278735594845b159c5cf36fb203b1309e067189632937f62ce49e9c708a9
+    depends_on:
+      neo4j-core:
+        condition: service_healthy
+    networks:
+      - neo4j-core
+      - auth-api-read-contents
+    environment:
+      PORT: 4000
+      NEO4J_URL: neo4j://neo4j-core:7687
+      NEO4J_USERNAME: ${NEO4J_USERNAME}
+      NEO4J_PASSWORD: ${NEO4J_PASSWORD}
+
+  auth-api-read-records-service:
+    image: ghcr.io/bo2kshelf/read-records-service:develop@sha256:44ba6f46f0d39d413e9787feac78ecef58965b1ccceced03d79072cc1a04726b
+    depends_on:
+      neo4j-core:
+        condition: service_healthy
+    networks:
+      - neo4j-core
+      - auth-api-read-records
+    environment:
+      PORT: 4000
+      NEO4J_URL: neo4j://neo4j-core:7687
+      NEO4J_USERNAME: ${NEO4J_USERNAME}
+      NEO4J_PASSWORD: ${NEO4J_PASSWORD}
+
+  auth-api-bookcover-service:
+    image: ghcr.io/bo2kshelf/bookcover-service:develop@sha256:b18da695a196e9665e562eace65d65f669620a554607c87fc3a4573594769a07
+    networks:
+      - auth-api-bookcover
+      - imageproxy
+    depends_on:
+      auth-api-bookcover-service-redis:
+        condition: service_healthy
+    environment:
+      PORT: 4000
+      RAKUTEN_APPLICATION_ID: $RAKUTEN_APPLICATION_ID
+      RAKUTEN_APPLICATION_SECRET: $RAKUTEN_APPLICATION_SECRET
+      IMAGEPROXY_BASE_URL: $IMAGEPROXY_BASE_URL
+      REDIS_HOST: auth-api-bookcover-service-redis
+      REDIS_PORT: 6379
+
+  auth-api-bookcover-service-redis:
+    image: redis:6@sha256:e10f55f92478715698a2cef97c2bbdc48df2a05081edd884938903aa60df6396
+    healthcheck: *redis-healthcheck
+    networks:
+      - auth-api-bookcover
+    volumes:
+      - auth-api-bookcover-service-redis-data:/data
