--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,41 @@
 ADMINER_PORT=13000
 ADMINER_DESIGN="pepa-linha"
 
-# Portainer
-PORTAINER_PORT=9000
+# supertokens
+SUPERTOKENS_PORT=3567
+
+SUPERTOKENS_APP_NAME="bo2kshelf"
+SUPERTOKENS_WEBSITE_DOMAIN="http://localhost:3000"
+SUPERTOKENS_API_DOMAIN="http://localhost:8080"
+
+SUPERTOKENS_MYSQL_PASSWORD=
+SUPERTOKENS_MYSQL_DATABASE="supertokens"
+
+# neo4j
+NEO4J_USERNAME="neo4j"
+NEO4J_PASSWORD=
+
+NEO4J_HTTP_PORT=17474
+NEO4J_BOLT_PORT=17687
+
+NEO4J_CONTENTS_DATABASE="contents"
+
+# users mysql
+USERS_MYSQL_CORE_ROOT_PASSWORD=
+USERS_MYSQL_CORE_DATABASE="users"
+
+# imageproxy
+IMAGEPROXY_PORT=12000
+IMAGEPROXY_HOST="localhost"
+IMAGEPROXY_BASE_URL="http://${IMAGEPROXY_HOST}:${IMAGEPROXY_PORT}"
+
+# Management API
+MANAGEMENT_API_PORT=9090
+
+# API
+API_PORT=8080
+
+API_JWT_SECRET=
 
 # chore
 RAKUTEN_APPLICATION_ID=
@@ -11,28 +44,3 @@ RAKUTEN_APPLICATION_SECRET=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-
-# Neo4j
-NEO4J_USERNAME="neo4j"
-NEO4J_PASSWORD=
-
-NEO4J_HTTP_PORT=17474
-NEO4J_BOLT_PORT=17687
-
-# imageproxy
-IMAGEPROXY_PORT=12000
-IMAGEPROXY_HOST="localhost"
-IMAGEPROXY_BASE_URL="http://${IMAGEPROXY_HOST}:${IMAGEPROXY_PORT}"
-
-# Public API
-PUBLIC_API_PORT=8080
-
-PAPI_USERS_MYSQL_ROOT_PASSWORD=
-PAPI_USERS_MYSQL_DATABASE="db"
-
-# Auth API
-AUTH_API_PORT=8081
-JWT_SECRET=
-
-# Management API
-MANAGEMENT_API_PORT=9090
